@startuml
skinparam monochrome true
skinparam classAttributeIconSize 0
scale 2

namespace data {
  namespace exceptions {
    Exception <|-- ParserError
    class ParserError {
    }

  }
  namespace handler {
    class Handler {
      +buildFromXML(self, file)
      +saveToXML(self, tree, file)
    }

  }
  namespace parsers {
  }
  namespace types {
    class Node {
      {static} +type
      +isRoot
      +id
      +title
      +description
      +attributes
      +parents
      +edges
      +visited
      +finished
      -__init__(self)
      +toString(self)
      +initDFS(self)
    }

    Node <|-- Threat
    class Threat {
      {static} +type
    }

    Node <|-- Countermeasure
    class Countermeasure {
      {static} +type
    }

    class Edge {
      +source
      +destination
      +conjunction
      -__init__(self, source, destination, conjunction)
      -__hash__(self)
    }

    class Tree {
      +extended
      +nodeList
      +edgeList
      +root
      +meta
      -__init__(self, extended)
      +addNode(self, node)
      +addEdge(self, source, destination, conjunction)
      +checkExtended(self)
      +checkCycle(self)
      +dfs(self, node)
    }

  }
}

@enduml
